--- a/for&while_questions/index.html
+++ b/for&while_questions/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="for.js"></script>
+  <script src="for&while.js"></script>
 </body>
 </html>
